force-app/main/default/objects/Top_Cryptocurrencies__c/Top_Cryptocurrencies__c.object-meta.xml
<CustomObject>
    <label>Top Cryptocurrencies</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Top Cryptocurrencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>