force-app/main/default/objects/Top_Cryptocurrencies__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the account related to this Crypto. Select via lookup or create new</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Top Cryptocurrencies</relationshipLabel>
    <relationshipName>Top_Cryptocurrencies</relationshipName>
    <type>Lookup</type>
</CustomField>