force-app/main/default/objects/Top_Cryptocurrencies__c/fields/Circulating_Supply__c.field-meta.xml
<CustomField>
    <fullName>Circulating_Supply__c</fullName>
    <inlineHelpText>This is the total number of coins or tokens that are actively available for trade and are being used in the market and in general public. Enter the value and the symbol of  cryptocurrency it is trading in. Example : 19038862 BTC</inlineHelpText>
    <label>Circulating Supply</label>
    <length>32</length>
    <type>Text</type>
</CustomField>