force-app/main/default/objects/Top_Cryptocurrencies__c/fields/Crypto_Hub__c.field-meta.xml
<CustomField>
    <fullName>Crypto_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crypto Hub</label>
    <referenceTo>Crypto_Hub__c</referenceTo>
    <relationshipLabel>Top Cryptocurrencies</relationshipLabel>
    <relationshipName>Top_Cryptocurrencies</relationshipName>
    <type>Lookup</type>
</CustomField>