force-app/main/default/objects/Top_Cryptocurrencies__c/fields/Market_Cap__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap__c</fullName>
    <inlineHelpText>Enter the amount at which this currency is capped in the market</inlineHelpText>
    <label>Market Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>