force-app/main/default/objects/Top_Cryptocurrencies__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>Current Price of this Cryptocurrency</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>