force-app/main/default/objects/Top_Cryptocurrencies__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <inlineHelpText>Rank of this cryptocurrency as compared to others</inlineHelpText>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>