force-app/main/default/objects/Top_Cryptocurrencies__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <inlineHelpText>Insert the Symbol of this Cryptocurrency</inlineHelpText>
    <label>Symbol</label>
    <length>16</length>
    <type>Text</type>
</CustomField>