force-app/main/default/objects/Top_Cryptocurrencies__c/fields/Volume_24h__c.field-meta.xml
<CustomField>
    <fullName>Volume_24h__c</fullName>
    <inlineHelpText>Volume of this cryptocurrency as compared to others</inlineHelpText>
    <label>Volume(24h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>