force-app/main/default/objects/Top_Cryptocurrencies__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Circulating_Supply__c</columns>
    <columns>Market_Cap__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>